style.css
/* ... */
body {
font-family: "acumin-pro", Arial, sans-serif;
color: #4A4A4A;
}

.home p {
  margin-bottom: 0px;
}

h2 {
  font-size: 2em;
}

h3 {
  font-size: 1.333em;
  font-style: normal;
}


h4 {
  font-size: 1.333em;
  font-style: normal;
}

/*Goes on containing element*/
.h-size-adjust {
  font-size: .83rem;
}

p {
  font-size: 1em;
  line-height: 2;
}

a {
  color: #9B9B9B;
  -webkit-transition: color .2s;
  transition: color .2s;
}

a:hover {
  color: #6BA443;
}

li {
  line-height: 2;
}

.dark-font {
  color: #4A4A4A;
}

.light-font {
  color: #9B9B9B;
  line-height: 2;
}

.more-link,
.cd-more {
  font-family: adobe-caslon-pro, serif;
  font-style: italic;
  font-weight: 400;
  margin: 1rem 0;
}

.accent {
  color: #6BA443;
  border-top-color: #6BA443;
  stroke: #6BA443;
}

blockquote.blockquote {
  font-size: 2rem;
}
/*----------------------------------------------*/
/*---------------     Layout     ---------------*/
/*----------------------------------------------*/

body {
  width: 100%;
  max-width: 100%;
}


/*---------------     Gallery     ---------------*/


.cd-gallery {
  width: 95%;
  max-width: 98%;
  margin: 0 auto;
}

/* Small screen gallery */
.cd-gallery-sizer,
.cd-gallery-item {
  width: 48%;
  background-color: #fff;
  border: 0px;
  cursor: pointer;
  margin-bottom: 10px;
  overflow: hidden;
}

.cd-gallery-wide {
  width: 100%;
}

/* Medium screen gallery */
@media screen and (min-width: 768px) {

.cd-gallery-sizer,
.cd-gallery-item {
    width: 32.3%;
  }

  .cd-gallery-wide {
    width: 64.6%
  }
}

/* Large screen gallery */
/*@media screen and (min-width: 992px) {

  .cd-gallery-sizer,
  .cd-gallery-item {
      width: 24%;
  }

  .cd-gallery-wide {
    width: 49%;
  }
}*/

.cd-grid-content > h3 {
  text-transform: uppercase;
}


/*---------------     Front Page Gallery     ---------------*/


.frontpage-gallery-item {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

.frontpage-project-info {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
  height: 100%;
  width: 100%;
  max-width: 100%;
  color: black;
  /*padding-bottom: .5rem;*/
  text-align: left;
}

.frontpage-project-info h3,
.frontpage-project-info h4,
.frontpage-project-info p {
  font-size: .778rem;
}

@media screen and (min-width: 768px) {

  .frontpage-project-info {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-box-align: start;
        -ms-flex-align: start;
            align-items: flex-start;
    position: absolute;
    bottom: 0;
    background-color: rgba(89, 89, 89, .75);
    height: 100%;
    width: 100%;
    max-width: 100%;
    color: white;
    padding: 1rem .75rem;
    /*padding-bottom: .5rem;*/
    opacity: 0;
    -webkit-transition: opacity .75s;
    transition: opacity .75s;
    text-align: left;
  }

  .frontpage-project-info h3,
  .frontpage-project-info h4,
  .frontpage-project-info p {
    font-size: 1rem;
  }

  .frontpage-gallery-item:hover .frontpage-project-info {
    opacity: 1;
  }

  .frontpage-gallery-item img {
    -webkit-transition: -webkit-transform .75s;
    transition: -webkit-transform .75s;
    transition: transform .75s;
    transition: transform .75s, -webkit-transform .75s;
  }

  .frontpage-gallery-item:hover img {
    -webkit-transform: scale(1.2);
            transform: scale(1.2);
  }

}


/*-----------------------------------------------*/
/*---------------     HEADERS     ---------------*/
/*-----------------------------------------------*/

.cd-slider-nav {
  /*position: absolute;
  top: 0;
  width: 100%;*/
  z-index: 10;
}


.fl-main-carousel {
  max-height: 100vh;
}

.admin-bar .fl-main-carousel {
  max-height: 95vh;
}

.fl-carousel-cell {
  width: 100%;
  height: auto;
  overflow: hidden;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.fl-carousel-cell img {
  width: 100%;
  height: auto;
}

.flickity-viewport {
  -webkit-transition: height 0.2s;
  transition: height 0.2s;
}

/* position dots in carousel */
.flickity-page-dots {
  bottom: 0px;
  margin-bottom: 1rem;
}

/* white circles */
.flickity-page-dots .dot {
  width: 12px;
  height: 12px;
  opacity: 1;
  background: transparent;
  border: 2px solid white;
}

/* fill-in selected dot */
.flickity-page-dots .dot.is-selected {
  background: white;
}

.img-slider {
  height: auto;
  max-height: 100vh;
  max-width: 100%;
}


.cd-logo {
  height: 15vw;
  max-height: 80px;
}
@media screen and (min-width: 768px) {
  .cd-logo {
    height: 80px;
  }

  .cd-slider-nav > nav.cd-nav {
    background-color: rgba(55, 55, 55, .6);
    z-index: 10;
  }

  .cd-slider-nav {
    position: absolute;
    /*top: 0;*/
    z-index: 1;
    width: 100%;
  }
  .admin-bar .cd-slider-nav {

  }
}

.cd-nav {
  background-color: #595959;
  padding-left: 0px;
}

.cd-nav > a {
  -webkit-box-flex: 1;
      -ms-flex: 1 2;
          flex: 1 2;
}
/*.cd-nav > .cd-menu {
  -webkit-box-flex: 2;
      -ms-flex: 2 1;
          flex: 2 1;
}*/

#menu-main-menu {
  -ms-flex-pack: distribute;
      justify-content: space-around;
  max-width: 100%;
}
/* ... */

